--- a/myStyle.css
+++ b/myStyle.css
@@ -7,7 +7,7 @@ body {
     background-color: #f7f7f7;  /* Set background color for empty spaces */
     position: relative; /* Set positioning context for pseudo-element */
     overflow: hidden; /* Prevent scrolling if image goes outside viewport */
-    /*padding-top: 60px; */
+    padding-top: 60px;
 }
 
 /* Pseudo-element to display the background image */
